2010-01-20  Doug Evans  <dje@sebabeach.org>

	* rtl-traverse.scm (/rtx-canon-anycexprmode): New function.
	(/rtx-make-canon-table): Add entry for ANYCEXPRMODE.
	(/rtx-canon-operands): Print expr-mode if /rtx-canon-debug?
	Do final error check on mode assigned to expression.
	(/rtx-make-traverser-table): Add entry for ANYCEXPRMODE.
	* rtl-xform.scm (/rtx-trim-args): Handle ANYCEXPRMODE.
	* rtl.scm (/rtx-valid-mode-types): Add ANYCEXPRMODE.
	* rtx-funcs.scm (c-code, c-call, c-raw-call): Use ANYCEXPRMODE.
	(if, cond, case): Use ANYEXPRMODE.

2010-01-19  Doug Evans  <dje@sebabeach.org>

	* testsuite/pmacros-1.test: Add more .splice tests.

	* read.scm (/cmd-include): Fix absolute path handling.

2010-01-05  Doug Evans  <dje@sebabeach.org>

	* mode.scm (<mode>) Rename member non-mode-c-type to c-type.
	All uses updated.
	(mode:non-mode-c-type): Delete.
	(mode:c-type): Update.
	* rtl-c.scm (s-shop): Fix casting of DI mode values.

2010-01-04  Doug Evans  <dje@sebabeach.org>

	* gen-all (all_cgen_cpus): Add sh.

2010-01-02  Doug Evans  <dje@sebabeach.org>

	* utils.scm (copyright-fsf, copyright-red-hat): Update copyright year.

2009-12-17  Doug Evans  <dje@sebabeach.org>

	* mep.opc: Apply patches from opcodes to compile with -Wshadow.
	mep-asm.c now regenerates correctly again.
	
	* gen-all: Add support for building gcc/newlib.
	Specify --prefix and install all built tools.

2009-12-16  Doug Evans  <dje@sebabeach.org>

	* sim.scm (/op-gen-written-update): Disable operand number is too
	large warning, for now.

2009-12-11  Nick Clifton  <nickc@redhat.com>

	* cpu/fr30.opc: Fix shadowed variable warnings.

2009-12-10  Doug Evans  <dje@sebabeach.org>

	* gen-all: Rewrite.  Build more ports.  Split out building of sid.

2009-11-23  Doug Evans  <dje@sebabeach.org>

	* hardware.scm (hw-pc?): New function.
	* ifield.scm (ifld-signed?): New function.
	* iformat.scm (ifmt-analyze): Call insn-cti-attr? instead of insn-cti?.
	* insn.scm (insn-cti-attr?): Renamed from insn-ctl?.